// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityDimensionColumn renders component 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        {
          "background": "rgba(0,0,0,0.085)",
          "border": "3px solid #000000",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background medium"
    style={
      {
        "background": "rgba(0,0,0,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with high score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        {
          "background": "rgba(0,0,0,0.085)",
          "border": "3px solid #000000",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background high"
    style={
      {
        "background": "rgba(0,0,0,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with low score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        {
          "background": "rgba(0,0,0,0.085)",
          "border": "3px solid #000000",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background low"
    style={
      {
        "background": "rgba(0,0,0,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with medium score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        {
          "background": "rgba(0,0,0,0.085)",
          "border": "3px solid #000000",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background medium"
    style={
      {
        "background": "rgba(0,0,0,0.1)",
      }
    }
  />
</li>
`;
